--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -37,7 +37,6 @@ main h1 {
 }
 
 main h2 {
-  font-size: 2rem;
   text-align: center;
 }
 
@@ -73,6 +72,15 @@ footer {
 
 /* CSS phones*/
 @media only screen and (max-width: 600px) {
+  main h1 {
+    font-size: 2.5rem;
+  }
+
+  main .destacados h2 {
+    font-size: 1.5rem;
+  }
+
+
   #productos {
     flex-direction: column;
     justify-content: center;
@@ -82,8 +90,7 @@ footer {
   }
 
   .productos p {
-    font-size: 1rem;
-    margin: 0 10px;
+    font-size: 0.8rem;
   }
 
   #comuniquemonos {
@@ -98,7 +105,7 @@ footer {
 /* CSS tablets*/
 @media only screen and (min-width: 601px) and (max-width: 991px) {
   main h1 {
-    font-size: 4.5rem;
+    font-size: 4rem;
   }
 
   main .destacados h2 {
@@ -129,7 +136,7 @@ footer {
 /* CSS laptops */
 @media only screen and (min-width: 992px) {
   main h1 {
-    font-size: 6rem;
+    font-size: 5rem;
   }
   main .destacados h2 {
     font-size: 2rem;
